@@ -393,7 +393,6 @@ void EU3World::convertCountries(map<string, CK2Title*> CK2Titles, const religion
 	}
 
 	// create vassal/liege relationships
-	vector<EU3Country*> independentCountries;
 	for (vector<EU3Country*>::iterator countryItr = convertedCountries.begin(); countryItr != convertedCountries.end(); countryItr++)
 	{
 		CK2Title* CK2Liege = (*countryItr)->getSrcCountry()->getLiege();
@@ -401,20 +400,7 @@ void EU3World::convertCountries(map<string, CK2Title*> CK2Titles, const religion
 		{
 			(*countryItr)->addLiege(CK2Liege->getDstCountry());
 		}
-		else
-		{
-			independentCountries.push_back(*countryItr);
-		}
 	}
-	log("Total converted EU3 countries before blobbing: %d\n", convertedCountries.size());
-
-	// blobify
-	for (vector<EU3Country*>::iterator countryItr = independentCountries.begin(); countryItr != independentCountries.end(); countryItr++)
-	{
-		(*countryItr)->eatVassals();
-	}
-	convertedCountries.swap(independentCountries);
-	log("Total converted EU3 countries after blobbing: %d\n", convertedCountries.size());
 }
 
 
@@ -926,6 +912,92 @@ void EU3World::convertEconomies(const cultureGroupMapping& cultureGroups, const 
 
 int EU3World::assignTags(Object* rulesObj, vector<string>& blockedNations, const provinceMapping& provinceMap)
 {
+	log("Total converted EU3 countries: %d\n", convertedCountries.size());
+
+	removeUnusedCountries();
+	log("Total converted EU3 countries after removing unused ones: %d\n", convertedCountries.size());
+
+	vector<EU3Country*> independentCountries;
+	for (vector<EU3Country*>::iterator convertedItr = convertedCountries.begin(); convertedItr != convertedCountries.end(); convertedItr++)
+	{
+		if ((*convertedItr)->getLiege() == NULL)
+		{
+			independentCountries.push_back(*convertedItr);
+		}
+	}
+	for (vector<EU3Country*>::iterator independentItr = independentCountries.begin(); independentItr != independentCountries.end(); independentItr++)
+	{
+		vector<EU3Country*> absorbedCountries = (*independentItr)->convertVassals(0, diplomacy);
+		for (vector<EU3Country*>::iterator absorbedItr = absorbedCountries.begin(); absorbedItr != absorbedCountries.end(); absorbedItr++)
+		{
+			for(vector<EU3Country*>::iterator convertedItr = convertedCountries.begin(); convertedItr != convertedCountries.end(); convertedItr++)
+			{
+				if (*absorbedItr == *convertedItr)
+				{
+					convertedCountries.erase(convertedItr);
+					continue;
+				}
+			}
+		}
+	}
+	log("Total converted EU3 countries after absorbing: %d\n", convertedCountries.size());
+
+	// blobify
+	independentCountries.clear();
+	for (vector<EU3Country*>::iterator convertedItr = convertedCountries.begin(); convertedItr != convertedCountries.end(); convertedItr++)
+	{
+		if ((*convertedItr)->getLiege() == NULL)
+		{
+			independentCountries.push_back(*convertedItr);
+		}
+	}
+	for (vector<EU3Country*>::iterator countryItr = independentCountries.begin(); countryItr != independentCountries.end(); countryItr++)
+	{
+		(*countryItr)->eatVassals();
+	}
+	convertedCountries.swap(independentCountries);
+	vector<EU3Country*> newConvertedCountries;
+	for (vector<EU3Country*>::iterator itr = convertedCountries.begin(); itr != convertedCountries.end(); ++itr)
+	{
+		bool keep = false;
+		// living country
+		if ((*itr)->hasProvinces())
+			keep = true;
+		// dead kingdom or higher, with remaining De Jure territory
+		else if ((*itr)->hasCores() && (*itr)->getSrcCountry())
+		{
+			string title = (*itr)->getSrcCountry()->getTitleString();
+			if (title[0] == 'e' || title[0] == 'k')
+				keep = true;
+		}
+
+		if (keep)
+			newConvertedCountries.push_back(*itr);
+		else
+		{
+			EU3Country* liege = (*itr)->getLiege();
+			if (liege != NULL)
+			{
+				liege->eatVassal(*itr);
+			}
+			else
+			{
+				vector<EU3Province*> cores = (*itr)->getCores();
+				for(vector<EU3Province*>::iterator coreItr = cores.begin(); coreItr != cores.end(); coreItr++)
+				{
+					(*coreItr)->removeCore(*itr);
+				}
+			}
+			CK2Title* src = (*itr)->getSrcCountry();
+			if (src) src->setDstCountry(NULL);
+			delete (*itr);
+		}
+	}
+	convertedCountries.swap(newConvertedCountries);
+
+	log("Total converted EU3 countries after blobbing: %d\n", convertedCountries.size());
+
+
 	// get CK2 Titles
 	map<string, CK2Title*> CK2Titles;
 	for (vector<EU3Country*>::iterator countryItr = convertedCountries.begin(); countryItr != convertedCountries.end(); countryItr++)
@@ -1200,21 +1272,18 @@ void EU3World::removeUnusedCountries()
 	for (vector<EU3Country*>::iterator itr = convertedCountries.begin(); itr != convertedCountries.end(); ++itr)
 	{
 		bool keep = false;
-		// living country
-		if ((*itr)->hasProvinces())
+		if ((*itr)->hasProvinces() || (*itr)->hasCores() || (*itr)->hasVassals())
 			keep = true;
-		// dead kingdom or higher, with remaining De Jure territory
-		else if ((*itr)->hasCores() && (*itr)->getSrcCountry())
-		{
-			string title = (*itr)->getSrcCountry()->getTitleString();
-			if (title[0] == 'e' || title[0] == 'k')
-				keep = true;
-		}
 
 		if (keep)
 			newConvertedCountries.push_back(*itr);
 		else
 		{
+			EU3Country* liege = (*itr)->getLiege();
+			if (liege != NULL)
+			{
+				liege->eatVassal(*itr);
+			}
 			CK2Title* src = (*itr)->getSrcCountry();
 			if (src) src->setDstCountry(NULL);
 			delete (*itr);
